// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esbuild-plugin json file 1`] = `
"(() => {
  var json_file_default = {};
})();
"
`;

exports[`esbuild-plugin mts workflow 1`] = `
""use strict";
(() => {
  var doWork = activity("doWork", async (input) => input);
  var workflow_default = workflow("workflow", function* (input) {
    const items = yield doWork(input);
    yield $Eventual.all(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.all(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.allSettled(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.any(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.race(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
  });
})();
"
`;

exports[`esbuild-plugin open-account 1`] = `
""use strict";
(() => {
  var open_account_default = workflow("open-account", function* ({ accountId, address, email, bankDetails }) {
    const rollbacks = [];
    try {
      yield createAccount(accountId);
    } catch (err) {
      console.error(err);
      throw err;
    }
    try {
      yield addAddress(accountId, address);
      rollbacks.push($eventual(function* () {
        return removeAddress(accountId);
      }));
      yield addEmail(accountId, email);
      rollbacks.push($eventual(function* () {
        return removeEmail(accountId);
      }));
      yield addBankAccount(accountId, bankDetails);
      rollbacks.push($eventual(function* () {
        return removeBankAccount(accountId);
      }));
    } catch (err) {
      yield $Eventual.all(rollbacks.map((rollback) => rollback()));
    }
  });
})();
"
`;

exports[`esbuild-plugin ts not workflow 1`] = `
""use strict";
(() => {
  var doWork = async () => {
  };
  function not_workflow_default() {
    console.log(doWork);
  }
})();
"
`;

exports[`esbuild-plugin ts workflow 1`] = `
""use strict";
(() => {
  var doWork = activity("doWork", async (input) => input);
  var workflow_default = workflow("workflow", function* (input) {
    const items = yield doWork(input);
    yield $Eventual.all(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.all(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.allSettled(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.any(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield $Eventual.race(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    condition(() => true);
    const func = () => $Eventual.all(items.map($eventual(function* (item) {
      yield doWork(item);
    })));
    yield func();
    const func2 = $eventual(function* () {
      yield $Eventual.all(items.map($eventual(function* (item) {
        yield doWork(item);
      })));
    });
    yield func2();
  });
  var workflow2 = workflow("timeoutFlow", {
    timeoutSeconds: 100
  }, function* () {
    yield doWork("something");
  });
  var workflow3 = workflow("timeoutFlow", function* () {
    const callMe = $eventual(function* () {
      yield sleepFor(20);
    });
    yield callMe();
  });
})();
"
`;
